# panamax-search

./: CHANGELOG.md  Makefile.md  README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/lib/: Cargo.toml  README.md
crates/lib/src/: functions.rs  index.rs  krate.rs  lib.rs  search.rs
