[package]
name = "panamax-search-lib"
version = "0.1.0"
edition = "2021"
description = "Search crates in a panamax mirror like `cargo search`"
repository = "https://github.com/qtfkwk/panamax-search"
license = "MIT"

[dependencies]
anyhow = "1.0.89"
flate2 = "1.0.33"
log = "0.4.22"
owo-colors = "4.1.0"
rayon = "1.10.0"
regex = "1.10.6"
rev_lines = "0.3.0"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tar = "0.4.41"
toml = { version = "0.8.19", features = ["parse"] }
walkdir = "2.5.0"
